# understandingpython.old

./: .gitattributes  README.md
DiffTests/: cert.pem  client.pem  key.pem  server.svc1.test.crt
ExercisesForProgrammers/: NumberOfChars.py  greetings.py  greetings1.py  madlib.py  palindrome.py  simplecalculator.py  tipcalculator.py
FlaskInterceptors/src/: __init__.py  flaskinterceptors.py  interceptors.py
ImageColorFrequency/: ColorFrequency.py  color_channels.pptx
ImageSimilarity/: requirements-dev.in
IntHash/: IntHash.py
IsUniformlyDistributed/src/: KS_test_practical_intro.py  rainbow.py  understanding_kstest_uniform_distributions.py
MySQL_Icecream/: .gitignore  LICENSE  README.md  bandit.cfg  pyproject.toml  requirements.in  setup.cfg  setup.py
MySQL_Icecream/src/: reseticecream.py
RxPy/: GitHubHireables.py
TestingFlask/: test_websvc.py  websvc.py
Text2Json/: Quotes.json  Quotes.txt  Quotes.txt.bak  Text2Json.py
api-server/: api-server.py  upload.html
arith-server/: arith.ini  arith.nginx  arith.py  arith.service  arithWithFlask.py  arith_wsgi.py
array2d/: array2d.py
asyncio/: asyncio_example.py  logsetup.py
classes/: classInit.py  classinheritance.py  using_property_class.py  using_property_decorator.py
connexion/: .gitignore  readme.md  requirements.txt.bak  server.py
decorators/: P00-functions-first-class-objects.py  P01-inner-functions.py  P02-returning-function-from-functions.py  P03-how-a-simple-decorator-works.py  P04-reusing-decorators.py  P05-decorating-functions-with-arguments.py  P06-swallowed-return.py  P07-decorators-return-values.py  P08-decorators-return-values-keeping-identity.py  P09-few-real-world-examples.py  P09a-order-matters.py  P10-decorators-with-arguments.py  README.md  decorators05.py  decorators07.py  decorators08.py  decorators09.py  decorators10.py  kulshandecorator.py
dictionary/: InspectingDefinitions.py  dictionary.py  entry.py
fastapi-sample/: LICENSE  README.md  paramters.YAML  requirements.in  setup.cfg
fastapi-sample/src/fastapisample/: __init__.py  app.py  fastrequests.py  iMath.py  logsetup.py  main.py  primes.py
generators-and-yield/: generatorsandyield.py
honeycomb/: honeycomb.py
hostsmgr/: hostsmgr.py
img2ico/: README.md  img2ico.py
learning/: ArrayConcatenationInDict.py  ClassesAndAttributeScope.py  DeleteFilesRecursively.py  DictionaryConcepts.py  DiffFiles.py  Enums.py  FileExceptions.py  GeneratingRandomStrings.py  GetCertificateInformation.py  GetProxyInfoFromStaticMappings.py  ImageProcessing_PILLOW.py  ListFilesNotJPG.py  README.md  RestWithFlask.py  SubprocessDeleteFiles.py  TuplesAndZip.py  UndeestandingSets.py  Use-Enums.py  Using-Array.py  Using-json.py  __main__.__file__.py  addchain.py  argument-unpacking.py  arguments.py  build-requirements.py  build_pdutypedb.py  cmdfind.py  combinatorial.py  conda-explicit-requirements.txt  conda-long-requirements.txt  conda-short-requirements.txt  connect4.py  devicesdb.json  evaluating_EmptyNoneObjects.py  export-regions.py  functionarguments.py  heic2jpg.py  import-regions.py  maketestfiles.sh  merge_ANSS.py  (+42 more)
logging/: aboutlogging.py  aboutloggingmodule.py  logsetup.py
opentelemetry/auto-instrumentation/: server_instrumented.py
opentelemetry/test-metrics/: README.md  example.py  example_01.py  example_02.py  python38-SxS-in-windows.md  requirements.bak
oracle-db/: create_ancestors_db.py  test_oracledb.py
oracle-db/data/: people.csv  people.xlsx
oracle-db/utils/: network-inspect.cmd  network-setup.cmd  set-admin-password.cmd  start-container.cmd  stop-container.cmd
pillow/src/: app.py
psutils-multiprocessing/: iMath.py  primes.py  psutils.py
pythonPackagesAndModules/: pyproject.toml  requirements-dev.in  requirements.in  setup.cfg
pythonnestedmodules/: .gitignore  README.md
randomnumbers/: README.md
randomnumbers/src/: cryptorandomnumbers.py  randomnumbers.py
readingwritingfile/: app.json  readingwriting.py
scopes/: scopes.py
str_is/: str_is.py
tic-tac-toe/: Part 1 - Computer Tic Tac Toe Basics.ipynb  Part 2 - The Min Max Algorithm.ipynb  Part 3 - Tabular Q-Learning.ipynb  Part 4 - Neural Network Q-Learning.ipynb  README.md  index.ipynb
timezone/: about_timezone.py
tkinter/: README.md  requirements.in
understanding_logging/: UnderstandingSubProcess.py  understandingParamiko.py  understandinglistintersection.py  understandingprecission.py
words_and_characters/: words_and_characters.py
~~ImageSimilarity/: .gitignore  requirements.in  setup.cfg
(+58 files in other folders)
