[metadata]
name = fastapisample
description = "Fastapi Sample"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://example.com/fastapisample
author = {{author_names}}
author_email = {{author_emails}}
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: Utilities
project_urls = 
    Documentation = https://example.com/fastapisample/docs
    Source = https://github.example.com/juan-pablo-jofre/fastapisample
    Tracker = https://example.com/fastapisample/issues

[options]
package_dir = 
    = src
packages = find:

platforms = any
include_package_data = True
python_requires = >=3.8

install_requires = file:requirements.in

[options.packages.find]
where = src
